--- a/css/media_extra_small.css
+++ b/css/media_extra_small.css
@@ -64,7 +64,7 @@
             order: 1;
   }
   .about__img__container {
-    background-color: #ff789e;
+    background-color: #E8F9FD;
     max-width: 100%;
     margin-left: 0.5em;
     margin-right: 0.5em;
