--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,8 @@
 navy: #382266
 pink: #ff789e
 blue: #8d94ba
-white: #E8F9FD;
+white: #A6D1E6_m;
+blue:  #A6D1E6;
 */
 
 /***  General styles  ***/
@@ -10,7 +11,7 @@ white: #E8F9FD;
 body {
   margin: 0;
   padding: 0;
-  background-color:  #E8F9FD;
+  background-color:  #A6D1E6;
   overflow-x: hidden;
 }
 li {
@@ -46,7 +47,7 @@ a {
   width: 100%;
   margin: 0;
   padding: 2em 0 1em;
-  color: #E8F9FD;
+  color: #A6D1E6;
   font-size: 2.5em;
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
@@ -63,7 +64,7 @@ a {
   width: 10px;
   height: 10px;
   margin-left: 5px;
-  background-color: #E8F9FD;
+  background-color: #A6D1E6;
 }
 .title__dot--white {
   background-color: #fff;
@@ -218,7 +219,7 @@ a {
   display: inline-block;
   background-color: #fff;
   padding: 0 15px;
-  color: #E8F9FD;
+  color: #A6D1E6;
   font-size: 2.9em;
   font-family: 'Open Sans', sans-serif;
   font-weight: 800;
@@ -343,7 +344,7 @@ a {
   min-width: 300px;
   max-width: 560px;
   box-sizing: content-box;
-  background-color: #E8F9FD;
+  background-color: #A6D1E6;
   padding: 0 2em 0;
   border-left: 15px solid #8d94ba;
 }
@@ -387,7 +388,7 @@ a {
   max-width: 360px;
   max-height: 360px;
   border-radius: 50%;
-  border: 15px solid #E8F9FD;
+  border: 15px solid #A6D1E6;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
@@ -601,7 +602,7 @@ a {
 /*** Contact ***/
 .contact {
   padding: 0 0 3em;
-  background-color: #E8F9FD;
+  background-color: #A6D1E6;
   text-align: center;
 }
 .contact__description {
