--- a/css/media_extra_small.css
+++ b/css/media_extra_small.css
@@ -64,7 +64,7 @@
             order: 1;
   }
   .about__img__container {
-    background-color: #A6D1E6;
+    background-color: #355764;
     max-width: 100%;
     margin-left: 0.5em;
     margin-right: 0.5em;
