--- a/css/media_small.css
+++ b/css/media_small.css
@@ -62,7 +62,7 @@
             order: 1;
   }
   .about__img__container {
-    background-color: #100720;
+    background-color: #ff789e;
     max-width: 100%;
     margin-left: 0.5em;
     margin-right: 0.5em;
