--- a/css/about-me-styles.css
+++ b/css/about-me-styles.css
@@ -11,7 +11,7 @@ body {
   width: 100%;
   margin: 0;
   padding: 1em 0 0.5em;
-  color: #100720;
+  color: #ff789e;
   font-size: 2.5em;
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
@@ -27,7 +27,7 @@ body {
   width: 10px;
   height: 10px;
   margin-left: 5px;
-  background-color: #100720;
+  background-color: #ff789e;
 }
 .about-me__title__dot--white {
   background-color: #fff;
@@ -107,7 +107,7 @@ body {
   background-color: #fff;
   box-shadow: 0 0 3px -1px rgba(0,0,0,0.4),
               0 13px 13px -10px rgba(0,0,0,0.4);
-  border-bottom: 12px solid #100720;
+  border-bottom: 12px solid #ff789e;
   border-radius: 3px;
   overflow-x: hidden;
 }
@@ -181,7 +181,7 @@ body {
 }
 .about-me__skills__middle__name {
   margin: 0;
-  color: #100720;
+  color: #382266;
   font-size: 2em;
   font-family: 'Open Sans', sans-serif;
   font-weight: 600;
@@ -194,7 +194,7 @@ body {
   display: inline-block;
   margin: 0;
   margin-top: 0em;
-  color: #100720;
+  color: #ff789e;
   font-size: 1em;
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
@@ -205,7 +205,7 @@ body {
 .about-me__skills__middle__description:after {
   content: "";
   width: 10px;
-  border-bottom: 2px solid #100720;
+  border-bottom: 2px solid #ff789e;
   position: absolute;
   top: 50%;
 }
@@ -220,13 +220,13 @@ body {
 .about-me__skills__text {
   margin: 1.2em auto 0.8em;
   max-width: 85%;
-  color: #100720;
+  color: #382266;
   font-size: 1.15em;
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 300;
 }
 .about-me__skills__text--accent {
-  color: #100720;
+  color: #ff789e;
 }
 .about-me__skills__btn {
   display: block;
@@ -235,12 +235,12 @@ body {
   margin: 1em auto 4em;
   padding: 10px;
   background-color: #fff;
-  color: #100720;
+  color: #382266;
   font-size: 1em;
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   border: none;
-  border-bottom: 8px solid #100720;
+  border-bottom: 8px solid #ff789e;
   border-radius: 3px;
   box-shadow: 0 0 3px -1px rgba(0,0,0,0.4),
               0 13px 13px -10px rgba(0,0,0,0.4);
@@ -298,7 +298,7 @@ body {
   right: 0em;
   display: inline-block;
   padding: 1px 10px;
-  background-color: #100720;
+  background-color: #ff789e;
   color: #fff;
   font-size: 1em;
   font-family: 'Source Sans Pro', sans-serif;
@@ -309,7 +309,7 @@ body {
   max-width: 100%;
   margin: 1.5em auto;
   padding: 0 1em;
-  color: #100720;
+  color: #382266;
   font-size: 1.15em;
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 300;
@@ -319,7 +319,7 @@ body {
   display: inline-block;
   margin-top: -1em;
   font-size: 1.7em;
-  color: #100720;
+  color: #ff789e;
 }
 .about-me__more {
   position: absolute;
@@ -357,7 +357,7 @@ body {
   border-bottom-left-radius: 3px;
 }
 .about-me__email {
-  color: #100720;
+  color: #ff789e;
   font-size: 1.4em;
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 400;
