--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,7 @@
 /* Colors
-navy: #100720
+navy: #382266
 pink: #ff789e
 blue: #8d94ba
-white: #100720_m;
-blue:  #100720_m;
-green_deep:  #100720;
 */
 
 /***  General styles  ***/
@@ -12,7 +9,7 @@ green_deep:  #100720;
 body {
   margin: 0;
   padding: 0;
-  background-color:  #100720;
+  background-color:  #ff789e;
   overflow-x: hidden;
 }
 li {
@@ -48,7 +45,7 @@ a {
   width: 100%;
   margin: 0;
   padding: 2em 0 1em;
-  color: #100720;
+  color: #ff789e;
   font-size: 2.5em;
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
@@ -65,7 +62,7 @@ a {
   width: 10px;
   height: 10px;
   margin-left: 5px;
-  background-color: #100720;
+  background-color: #ff789e;
 }
 .title__dot--white {
   background-color: #fff;
@@ -76,7 +73,7 @@ a {
   max-width: 100%;
   height: 50px;
   margin: 0 auto;
-  background-color: #100720;
+  background-color: #382266;
   opacity: 0;
   position: fixed;
   top: 0;
@@ -220,7 +217,7 @@ a {
   display: inline-block;
   background-color: #fff;
   padding: 0 15px;
-  color: #100720;
+  color: #ff789e;
   font-size: 2.9em;
   font-family: 'Open Sans', sans-serif;
   font-weight: 800;
@@ -271,7 +268,7 @@ a {
 }
 .header__btn:hover {
   box-shadow: 0 3px 5px -3px #333,
-              inset 0 -50px 0 0 #100720;
+              inset 0 -50px 0 0 #382266;
   color: #fff;
 }
 .header__mouse__container {
@@ -283,7 +280,7 @@ a {
           transform: translateX(-50%);
   width: 170px;
   height: 150px;
-  background-color: #100720;
+  background-color: #382266;
   border-radius: 50%;
 }
 .header__mouse {
@@ -330,7 +327,7 @@ a {
 
 /*** About section ***/
 .about {
-  background-color: #100720;
+  background-color: #382266;
 }
 .about__info__container {
   display: -webkit-box;
@@ -345,7 +342,7 @@ a {
   min-width: 300px;
   max-width: 560px;
   box-sizing: content-box;
-  background-color: #100720;
+  background-color: #ff789e;
   padding: 0 2em 0;
   border-left: 15px solid #8d94ba;
 }
@@ -381,7 +378,7 @@ a {
   transition: all 0.3s linear;
 }
 .about__btn:hover {
-  box-shadow: inset 0 -50px 0 0 #100720;
+  box-shadow: inset 0 -50px 0 0 #382266;
   color: #fff;
 }
 .about__img {
@@ -389,7 +386,7 @@ a {
   max-width: 360px;
   max-height: 360px;
   border-radius: 50%;
-  border: 15px solid #100720;
+  border: 15px solid #ff789e;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
@@ -407,7 +404,7 @@ a {
 .portfolio__description {
   max-width: 65%;
   margin: 0 auto 2em;
-  color: #100720;
+  color: #382266;
   font-size: 1.2em;
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 300;
@@ -603,7 +600,7 @@ a {
 /*** Contact ***/
 .contact {
   padding: 0 0 3em;
-  background-color: #100720;
+  background-color: #ff789e;
   text-align: center;
 }
 .contact__description {
@@ -675,7 +672,7 @@ a {
 .footer {
   border-top: 2px solid #cfd2e2;
   height: 100px;
-  background-color: #100720;
+  background-color: #382266;
   opacity: 0;
   position: relative;
   top: 2em;
