--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 /* Colors
-navy: #382266
+navy: #325288
+blue_deep: #325288;
 pink: #ff789e
 blue: #8d94ba
 */
@@ -73,7 +74,7 @@ a {
   max-width: 100%;
   height: 50px;
   margin: 0 auto;
-  background-color: #382266;
+  background-color: #325288;
   opacity: 0;
   position: fixed;
   top: 0;
@@ -268,7 +269,7 @@ a {
 }
 .header__btn:hover {
   box-shadow: 0 3px 5px -3px #333,
-              inset 0 -50px 0 0 #382266;
+              inset 0 -50px 0 0 #325288;
   color: #fff;
 }
 .header__mouse__container {
@@ -280,7 +281,7 @@ a {
           transform: translateX(-50%);
   width: 170px;
   height: 150px;
-  background-color: #382266;
+  background-color: #325288;
   border-radius: 50%;
 }
 .header__mouse {
@@ -327,7 +328,7 @@ a {
 
 /*** About section ***/
 .about {
-  background-color: #382266;
+  background-color: #325288;
 }
 .about__info__container {
   display: -webkit-box;
@@ -378,7 +379,7 @@ a {
   transition: all 0.3s linear;
 }
 .about__btn:hover {
-  box-shadow: inset 0 -50px 0 0 #382266;
+  box-shadow: inset 0 -50px 0 0 #325288;
   color: #fff;
 }
 .about__img {
@@ -404,7 +405,7 @@ a {
 .portfolio__description {
   max-width: 65%;
   margin: 0 auto 2em;
-  color: #382266;
+  color: #325288;
   font-size: 1.2em;
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 300;
@@ -672,7 +673,7 @@ a {
 .footer {
   border-top: 2px solid #cfd2e2;
   height: 100px;
-  background-color: #382266;
+  background-color: #325288;
   opacity: 0;
   position: relative;
   top: 2em;
