--- a/css/media_large.css
+++ b/css/media_large.css
@@ -5,7 +5,7 @@
     min-width: 200px;
     max-width: 500px;
     box-sizing: content-box;
-    background-color: #ff789e;
+    background-color: #24A19C;
     padding: 1em 1em 0;
     border-left: 15px solid #8d94ba;
   }
