--- a/css/media_medium.css
+++ b/css/media_medium.css
@@ -68,7 +68,7 @@
     max-width: 40%;
     margin-left: 0.3em;
     height: auto;
-    border: 20px solid #ff789e;
+    border: 20px solid #24A19C;
     border-top: 0;
     border-right: 0;
     float: right;
