--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,9 @@
 /* Colors
 navy: #382266
-blue_deep: #325288;
-pink: #24A19C
+blue_deep: #ECE8D9;
+pink: #ff789e
 blue: #8d94ba
+cream:  #ECE8D9;
 */
 
 /***  General styles  ***/
@@ -74,7 +75,7 @@ a {
   max-width: 100%;
   height: 50px;
   margin: 0 auto;
-  background-color: #325288;
+  background-color: #ECE8D9;
   opacity: 0;
   position: fixed;
   top: 0;
@@ -269,7 +270,7 @@ a {
 }
 .header__btn:hover {
   box-shadow: 0 3px 5px -3px #333,
-              inset 0 -50px 0 0 #325288;
+              inset 0 -50px 0 0 #ECE8D9;
   color: #fff;
 }
 .header__mouse__container {
@@ -281,7 +282,7 @@ a {
           transform: translateX(-50%);
   width: 170px;
   height: 150px;
-  background-color: #325288;
+  background-color: #ECE8D9;
   border-radius: 50%;
 }
 .header__mouse {
@@ -328,7 +329,7 @@ a {
 
 /*** About section ***/
 .about {
-  background-color: #325288;
+  background-color: #ECE8D9;
 }
 .about__info__container {
   display: -webkit-box;
@@ -379,7 +380,7 @@ a {
   transition: all 0.3s linear;
 }
 .about__btn:hover {
-  box-shadow: inset 0 -50px 0 0 #325288;
+  box-shadow: inset 0 -50px 0 0 #ECE8D9;
   color: #fff;
 }
 .about__img {
@@ -405,7 +406,7 @@ a {
 .portfolio__description {
   max-width: 65%;
   margin: 0 auto 2em;
-  color: #325288;
+  color: #ECE8D9;
   font-size: 1.2em;
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 300;
@@ -673,7 +674,7 @@ a {
 .footer {
   border-top: 2px solid #cfd2e2;
   height: 100px;
-  background-color: #325288;
+  background-color: #ECE8D9;
   opacity: 0;
   position: relative;
   top: 2em;
