--- a/css/project-styles.css
+++ b/css/project-styles.css
@@ -128,7 +128,7 @@ body {
 .project__flex__text {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 300;
-  color: #ECE8D9;
+  color: #323232;
   font-size: 1.22em;
 }
 .project__flex__skill {
