--- a/css/styles.css
+++ b/css/styles.css
@@ -217,9 +217,9 @@ a {
 }
 .header__title {
   display: inline-block;
-  background-color: #fff;
+  background-color: #323232;
   padding: 0 15px;
-  color: #24A19C;
+  color: #fff;
   font-size: 2.9em;
   font-family: 'Open Sans', sans-serif;
   font-weight: 800;
