--- a/css/about-me-styles.css
+++ b/css/about-me-styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(../images/about_background.svg);
+  background-image: url(../images/about_background.jpg);
   background-size: 200px;
   height: 200px;
   background-repeat: repeat;
