--- a/css/styles.css
+++ b/css/styles.css
@@ -233,7 +233,8 @@ a {
 }
 .header__subtitle {
   display: inline-block;
-  background-color: #8d94ba;
+  /*background-color: #8d94ba;*/
+  background-color: #323232;
   padding: 3px 15px;
   color: #fff;
   font-size: 1.8em;
@@ -252,7 +253,8 @@ a {
   border-bottom-color: transparent;
   border-top-color: transparent;
   width: 220px;
-  background-color: #8d94ba;
+  /*background-color: #8d94ba;*/
+  background-color: #323232;
   border-radius: 25px;
   padding: 5px 0;
   color: #fff;
