--- a/css/styles.css
+++ b/css/styles.css
@@ -737,3 +737,8 @@ a {
   opacity: 1;
   text-align: right;
 }
+.slider .slick-slide {
+    background: #f5f5f5;
+    border: solid 1px #dedede;
+    padding: 30px;
+}
