--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -573,7 +573,7 @@ header .navbar ul li a:hover {
   width: 100%;
 }
 .education .box-container .box img {
-  object-fit: cover;
+  object-fit: contain;
   position: relative;
   width: 100%;
   height: 100%;
