--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -573,7 +573,7 @@ header .navbar ul li a:hover {
   width: 100%;
 }
 .education .box-container .box img {
-  object-fit: contain;
+  object-fit: fill;
   position: relative;
   width: 100%;
   height: 100%;
@@ -668,7 +668,7 @@ header .navbar ul li a:hover {
 .work .box-container .box img {
   height: 100%;
   width: 100%;
-  object-fit: cover;
+  object-fit: fill;
 }
 .work .box-container .box .content {
   height: 100%;
