--- a/projects/style.css
+++ b/projects/style.css
@@ -218,7 +218,7 @@ header .navbar ul li a:hover {
 .work .box-container .box img {
   height: 100%;
   width: 100%;
-  object-fit: contain;
+  object-fit: fill;
 }
 .work .box-container .box .content {
   height: 100%;
