--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1244,7 +1244,7 @@ form .button-area {
   width: 30rem;
   height: auto;
   border-radius: 5%;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.6);
+  /* box-shadow: 0 5px 10px rgba(0, 0, 0, 0.6); */
   mix-blend-mode: luminosity;
   transition: 0.3s;
   cursor: pointer;
