--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1316,43 +1316,13 @@ form .button-area {
 } */
 
 /* mulai */
-.slider-container {
-  position: relative;
-  max-width: 800px;
-  margin: 0 auto;
+.carousel-indicators {
+  position: static;
 }
-.slider {
-  display: flex;
-  overflow-x: scroll;
-  scroll-snap-type: x mandatory;
-  -webkit-overflow-scrolling: touch;
-  scroll-behavior: smooth;
-  height: 400px;
-}
-.slider img {
-  scroll-snap-align: start;
-  width: 100%;
+.carousel-indicators li {
+  width: 300px;
   height: 100%;
-  object-fit: cover;
-}
-.thumbnails {
-  display: flex;
-  justify-content: center;
-  margin-top: 10px;
-}
-.thumbnails img {
-  width: 60px;
-  height: 60px;
-  margin-right: 10px;
-  object-fit: cover;
-  border: 2px solid #ccc;
-  cursor: pointer;
-  opacity: 0.5;
-  transition: opacity 0.3s ease-in-out;
-}
-.thumbnails img.active {
-  opacity: 1;
-  border-color: #000;
+  opacity: 0.8;
 }
 
 
