penambahan dan perubahan 43

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1316,70 +1316,44 @@ form .button-area {
 } */
 
 /* mulai */
-/*Time for the CSS*/
-* {margin: 0; padding: 0;}
-body {background: #ccc;}
-
-.slider{
-	width: 640px; /*Same as width of the large image*/
-	position: relative;
-	/*Instead of height we will use padding*/
-	padding-top: 320px; /*That helps bring the labels down*/
-	
-	margin: 100px auto;
-	
-	/*Lets add a shadow*/
-	box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.75);
+body{
+  background-color: #7B1FA2;
 }
 
-
-/*Last thing remaining is to add transitions*/
-.slider>img{
-	position: absolute;
-	left: 0; top: 0;
-	transition: all 0.5s;
+.container{
+    margin-top:100px;
+    margin-bottom:100px;
 }
 
-.slider input[name='slide_switch'] {
-	display: none;
+.carousel-inner img {
+    width: 100%;
+    height: 100%;
 }
 
-.slider label {
-	/*Lets add some spacing for the thumbnails*/
-	margin: 18px 0 0 18px;
-	border: 3px solid #999;
-	
-	float: left;
-	cursor: pointer;
-	transition: all 0.5s;
-	
-	/*Default style = low opacity*/
-	opacity: 0.6;
+#custCarousel .carousel-indicators {
+  position: static;
+  margin-top:20px;
 }
 
-.slider label img{
-	display: block;
+#custCarousel .carousel-indicators > li {
+width:100px;
 }
 
-/*Time to add the click effects*/
-.slider input[name='slide_switch']:checked+label {
-	border-color: #666;
-	opacity: 1;
+#custCarousel .carousel-indicators li img {
+  display: block;
+  opacity: 0.5;
 }
-/*Clicking any thumbnail now should change its opacity(style)*/
-/*Time to work on the main images*/
-.slider input[name='slide_switch'] ~ img {
-	opacity: 0;
-	transform: scale(1.1);
-}
-/*That hides all main images at a 110% size
-On click the images will be displayed at normal size to complete the effect
-*/
-.slider input[name='slide_switch']:checked+label+img {
-	opacity: 1;
-	transform: scale(1);
-}
-/*Clicking on any thumbnail now should activate the image related to it*/
 
-/*We are done :)*/
+#custCarousel .carousel-indicators li.active img {
+  opacity: 1;
+}
+
+#custCarousel .carousel-indicators li:hover img {
+  opacity: 0.75;
+}
+
+.carousel-item img{
+
+  width:80%;
+}
 /* mulai end */
