penambahan dan perubahan 45

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1316,9 +1316,9 @@ form .button-area {
 } */
 
 /* mulai */
-body{
+/* body{
   background-color: #7B1FA2;
-}
+} */
 
 .container{
     margin-top:100px;
